--- a/cellout/package.yaml
+++ b/cellout/package.yaml
@@ -1,9 +1,9 @@
 name:                cellout
 version:             0.1.0.0
-github:              "githubuser/cellout"
+github:              "ivanov/cellout"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
+author:              "Paul Ivanov"
+maintainer:          "pi@berkeley.edu"
 copyright:           "2018 Author name here"
 
 extra-source-files:
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/cellout#readme>
+description:         Please see the README on GitHub at <https://github.com/ivanov/cellout#readme>
 
 dependencies:
 - base >= 4.7 && < 5
