--- a/cellout/package.yaml
+++ b/cellout/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/ivan
 
 dependencies:
 - base >= 4.7 && < 5
+- aeson >= 1.4.1.0
 
 library:
   source-dirs: src
