--- a/cellout/stack.yaml
+++ b/cellout/stack.yaml
@@ -38,7 +38,10 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
+extra-deps:
+- aeson-1.4.1.0
+- attoparsec-0.13.2.2
+- parsec-3.1.13.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
