--- a/stack.yaml
+++ b/stack.yaml
@@ -40,6 +40,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
 - aeson-1.4.1.0
+- containers-0.6.0.1
 # - attoparsec-0.13.2.2
 # - parsec-3.1.13.0
 
