--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/ivan
 dependencies:
 - base >= 4.7 && < 5
 - aeson >= 1.4.1.0
+- aeson-pretty >= 0.8.7
 - containers >= 0.6.0.1
 - text
 - bytestring
@@ -41,6 +42,7 @@ executables:
     dependencies:
     - cellout
     - aeson
+    - aeson-pretty
     - containers
 
 tests:
