--- a/package.yaml
+++ b/package.yaml
@@ -21,13 +21,14 @@ description:         Please see the README on GitHub at <https://github.com/ivan
 
 dependencies:
 - base >= 4.7 && < 5
-- aeson >= 1.4.1.0
-- aeson-pretty >= 0.8.7
-- containers >= 0.6.0.1
-- text
-- bytestring
-- unordered-containers
-- vector
+- aeson >= 1.4.1 && < 1.5
+- aeson-pretty >= 0.8.7 && < 0.9
+- bytestring >= 0.10.8.2 && < 0.11
+- containers >= 0.6 && < 0.7
+- optparse-applicative >= 0.14.2 && < 0.15
+- text >= 1.2.3 && < 1.3
+- unordered-containers >= 0.2.9 && < 0.3
+- vector >= 0.12 && < 0.13
 
 library:
   source-dirs: src
