store full path of processed notebooks

--- a/package.yaml
+++ b/package.yaml
@@ -45,6 +45,7 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - directory
     - cellout
     - aeson
     - aeson-pretty
